// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IncomingBox renders a ghost 1`] = `
<div
  className="m-incoming-box"
>
  <button
    className="m-incoming-box__vehicle "
    onClick={[Function]}
  >
    <svg
      style={
        Object {
          "height": 15.2,
          "width": 16.72,
        }
      }
      viewBox="-8.36 -7.6 16.72 15.2"
    >
      <g
        className="m-vehicle-icon m-vehicle-icon--small ghost"
      >
        <g
          transform="scale(0.26599999999999996) translate(-24,-23)"
        >
          <path
            className="m-vehicle-icon__ghost-highlight"
            d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
            stroke-join="round"
          />
          <path
            className="m-vehicle-icon__ghost-body"
            d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
            stroke-join="round"
          />
        </g>
        <text
          className="m-vehicle-icon__variant"
          dominantBaseline="alphabetic"
          textAnchor="middle"
          x={0}
          y={3.5999999999999996}
        >
          5
        </text>
      </g>
    </svg>
    <div
      className="m-incoming-box__vehicle-label"
    >
      1056
    </div>
  </button>
</div>
`;

exports[`IncomingBox renders a vehicle 1`] = `
<div
  className="m-incoming-box"
>
  <button
    className="m-incoming-box__vehicle "
    onClick={[Function]}
  >
    <svg
      style={
        Object {
          "height": 15.2,
          "width": 16.72,
        }
      }
      viewBox="-8.36 -7.6 16.72 15.2"
    >
      <g
        className="m-vehicle-icon m-vehicle-icon--small on-time"
      >
        <path
          className="m-vehicle-icon__triangle"
          d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
          transform="scale(0.38) rotate(0) translate(-24,-22)"
        />
        <text
          className="m-vehicle-icon__variant"
          dominantBaseline="alphabetic"
          textAnchor="middle"
          x={0}
          y={5.6}
        >
          5
        </text>
      </g>
    </svg>
    <div
      className="m-incoming-box__vehicle-label"
    >
      1056
    </div>
  </button>
</div>
`;

exports[`IncomingBox renders empty state 1`] = `
<div
  className="m-incoming-box"
/>
`;
